--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
             <a href="About.html" class="navbar__links">About</a>
           </li>
           <li class="navbar__btn">
-            <a href="sign-up" class="button">Sign Up</a>
+            <button class="button"><a href="signup.html">Sign up</a></button>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
         <div class="main__content">
           <h1>What was the motive?</h1>
         <div class="main__img-container">
-          <img id="main__img" src="images/gluten-free.jpg" />
+          <img id="main__img" src="images/gluten-free.jpg" /> 
         </div>
       </div>
     </div>
@@ -52,6 +52,18 @@
     <script src="app.js"></script>
   </body>
 </html>
+<!-- Motives Section -->
+<div class="motives">
+    <div class="motives">
+      <div class="motives__card">
+        <p>The motive for this project is to make a cookbook for people diagnosed with lactose intolerance and Celiac condition because, since my younger years; I have always enjoyed making food to impress my family, to fill my time, and to eat whatever I was craving. Like all other kids; most of my cravings were something sweet. Perhaps a double chocolate cake or a fudgy brownie. After I’ve made them, I would go around feeding all my family members; but when it was my mom's turn; she would only take a bite or two. Growing up, I realized this was because she has a digestive disorder called lactose intolerance which disables her from eating dairy. So, in order for her to enjoy the food I made, I have started to search the internet for lactose free recipes based on what I was craving; but sometimes they come out tasting weird because of the dairy replacements. The struggle that these people have to go through just to eat a simple recipe they crave and the struggle I saw my mom go through when I made her a recipe that has lactose is what inspired me to create this cookbook. An electronic e-book will be made as the product, where it will suit everyone from all ages. This will be achieved by making sure that the design and colors are appropriate for everyone. I will also make sure that the recipes I create wont have that “weird” taste because of them being lactose and gluten free. Celiac disease has been included since they also have to go through almost the same thing.
+        </p>
+      </div>
+      </div>
+    </div>
+  </div>
+
+
 <!-- Footer Section -->
 <div class="footer__container">
     <div class="footer__links">
