--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="About.html" class="navbar__links">About</a>
               </li>
           </li>
-          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
+          <button class="button"><a href="signup.html">Sign up</a></button>
         </ul>
       </div>
     </nav>
