--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
             <a href="About.html" class="navbar__links">About</a>
           </li>
           <li class="navbar__btn">
-            <a href="/sign-up" class="button">Sign Up</a>
+            <button class="button"><a href="signup.html">Sign up</a></button>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
         <div class="main__content">
           <h1>Product section</h1>
           <p>Check out our cookbook</p>
-          <button class="main__btn"><a href="#">Download</a></button>
+          <a href="images/book.pdf" download="cookbook" class="main__btn">Download</a>
         </div>
         <div class="main__img-container">
           <img id="main__img" src="images/image (10).png" />
